--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- SCRFORMAT: banner -->
 <!-- SCRWIDTH: 300 -->
 <!-- SCRHEIGHT: 600 -->
-<title>index</title>
+<title>HELLO</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 <style>html,body{margin:0;padding:0;border:0;position:relative;width:100%;height:100%;overflow:hidden;background:rgba(255, 255, 255, 1.00);}#canvas{cursor:pointer;}div{box-sizing:border-box;}</style>
 <!-- write your code here -->
